api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    service: api
spec:
  selector:
    app: synergychat-api
  type: ClusterIP
