crawler-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
  labels:
    service: api
spec:
  selector:
    app: synergychat-crawler
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
