web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    service: web
spec:
  selector:
    app: synergychat-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
